--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,26 +7,25 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_logo_adaptive_round"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:roundIcon="@mipmap/ic_logo_adaptive_round"
+        android:supportsRtl="true">
         <!--<meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/admob_app_id"/>-->
 
-        <activity android:name=".activities.MainActivity" android:configChanges="keyboardHidden|orientation|screenSize">
+        <activity android:name=".activities.MainActivity" android:configChanges="keyboardHidden|orientation|screenSize" android:theme="@style/AppThemeDrawer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.PacienteActivity" android:label="@string/menu_patient"/>
-        <activity android:name=".activities.CalculoActivity" android:label="@string/resultado" android:configChanges="orientation|keyboardHidden" />
-        <activity android:name=".activities.AjusteActivity" android:label="@string/menu_setting"/>
-        <activity android:name=".activities.HistorialActivity" android:label="@string/menu_record" android:configChanges="orientation|keyboardHidden"></activity>
+        <activity android:name=".activities.PacienteActivity" android:label="@string/menu_patient" android:theme="@style/AppTheme"/>
+        <activity android:name=".activities.CalculoActivity" android:label="@string/resultado" android:configChanges="orientation|keyboardHidden" android:theme="@style/AppTheme"/>
+        <activity android:name=".activities.AjusteActivity" android:label="@string/menu_setting" android:theme="@style/AppTheme"/>
+        <activity android:name=".activities.HistorialActivity" android:label="@string/menu_record" android:configChanges="orientation|keyboardHidden" android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
