Agregar a sharedpreferences el conteo como temporal, agregar los anuncios generados, mejoras en estilos

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,9 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     // https://mvnrepository.com/artifact/org.apache.poi/poi
-    implementation group: 'org.apache.poi', name: 'poi', version: '3.17'
+    implementation 'org.apache.poi:poi:3.17'
     // https://mvnrepository.com/artifact/com.itextpdf/itextg
-    implementation group: 'com.itextpdf', name: 'itextg', version: '5.5.10'
+    implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.google.android.gms:play-services-ads:17.1.2'
+    implementation 'com.google.code.gson:gson:2.2.4'
 }
